--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,9 @@ body {
 	position: absolute;
 	z-index: 3;
 	opacity: .8;
-	top: 0px;
+	top: 330px;
+	left:300px;
+	
 }
 
 .thumbnail {
@@ -49,14 +51,26 @@ body {
 	position: relative;
 }
 
+
 #prevPhoto {
 	height: 42px;
 	width: 42px;
+	transform: rotate(180deg);
+	
+
 }
+
+
+#prevPhoto:hover, #nextPhoto:hover{
+	opacity: .5;
+}
+
 
 #nextPhoto {
 	height: 42px;
 	width: 42px;
+	position: relative;
+	left: 565px;
 }
 
 .details p {
@@ -70,12 +84,20 @@ body {
 
 /*Add CSS styles to rotate the element 90deg
 Make it animate nicely. You'll need CSS3 for this*/
-.rot90 {}
+.rot90 {
+	transform: rotate(90deg);
+}
 
 /*Add CSS styles to rotate the element 180deg
 Make it animate nicely. You'll need CSS3 for this*/
-.rot180 {}
+.rot180 {
+		transform: rotate(180deg);
+
+}
 
 /*Add CSS styles to rotate the element 270deg
 Make it animate nicely. You'll need CSS3 for this*/
-.rot270 {}
+.rot270 {
+		transform: rotate(270deg);
+
+}
